# tg-monitor-lizard

./: Cargo.toml  docker-compose.yml
migrations/2024-12-23-111733_init_db/: down.sql  up.sql
src/: db.rs  dialog.rs  error.rs  etcd.rs  event.rs  handler.rs  main.rs  model.rs  modules.rs  plugin.rs  telegram.rs  util.rs
src/db/: module_data.rs  modules.rs  schema.rs  settings.rs
src/dialog/: manager.rs  storage.rs
src/dialog/storage/: memory.rs
src/etcd/: client.rs  kv.rs  kv_group.rs
src/event/: manager.rs
src/model/: telegram.rs
src/modules/: demo.rs  join_validation_math.rs
src/plugin/: cmd.rs  context.rs  listener.rs  manager.rs  module_cmd.rs  plugin.rs
src/telegram/: cli.rs  dialog_join_event.rs  event_join_member.rs  event_left_member.rs  initial.rs  util.rs
