[package]
name = "tg-monitor-lizard"
version = "0.1.0"
edition = "2021"
authors = ["Lennard Brinkhaus <lennard.brinkhaus@dragse.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { version = "1.0" }
anyhow = "1.0"
tokio = { version = "1.32", features = ["full"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
lazy_static = "1.4"
async_once = "0.2"
rand = "0.8"
frankenstein = "0.34"
dptree = "0.3"